--- a/index.html
+++ b/index.html
@@ -4,6 +4,26 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="./src/assets/download.jpeg" type="image/svg+xml" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="
+      default-src 'self';
+      style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+      font-src 'self' https://fonts.gstatic.com;
+      script-src 'self' 'unsafe-inline' 'unsafe-eval';
+      connect-src 'self' http://localhost:*;
+    "
+    />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Fira+Code:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Delius&display=swap"
+      rel="stylesheet"
+    />
     <title>Nebula</title>
     <meta name="description" content="Backend as a Service" />
     <meta name="author" content="Annany Vishwakarma" />
@@ -11,7 +31,7 @@
 
   <body>
     <div id="root"></div>
-    <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
+
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
