--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <meta
       http-equiv="Content-Security-Policy"
       content="
-      default-src 'self';
-      style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
-      font-src 'self' https://fonts.gstatic.com;
-      script-src 'self' 'unsafe-inline' 'unsafe-eval';
-      connect-src 'self' http://localhost:*;
-    "
+        default-src 'self';
+        style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+        font-src 'self' https://fonts.gstatic.com;
+        script-src 'self' 'unsafe-inline' 'unsafe-eval';
+        connect-src 'self' http://localhost:* https://nebula-backend.duckdns.org;
+      "
     />
 
     <link
