--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
         font-src 'self' https://fonts.gstatic.com;
         script-src 'self' 'unsafe-inline' 'unsafe-eval';
-        connect-src 'self' http://localhost:* https://nebula-backend.duckdns.org/*;
+        connect-src 'self' http://localhost:* https://nebula-backend.duckdns.org/* https://api-nebula-backend.duckdns.org/*;
       "
     />
 
