Update title in index.html for better clarity, increment version in package-lock.json to 0.1.0, refactor AnimatedBackground component for improved star animation, enhance Hero component with a direct login link, and add GitHub link to Navbar.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Delius&display=swap"
       rel="stylesheet"
     />
-    <title>Nebula</title>
+    <title>Nebula - A lightweight backend for modern devs</title>
     <meta name="description" content="Backend as a Service" />
     <meta name="author" content="Annany Vishwakarma" />
   </head>
